tests/rosetta/out/Smalltalk/biorhythms.out
/tmp/biorhythms.st:9: parse error, expected ']'
